syntax = "proto3";
package example;

service Example {
    rpc GetById(Query) returns (my_table);
    rpc GetAll(Empty) returns (my_tableList);
}

message my_table {
    int32 id = 1;
    int32 value = 3;

}

message my_tableList {
    repeated my_table list = 1;
}

message Query {
    int32 id = 1;
}

message Empty {}